--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,7 @@ filterwarnings =
 
 [flake8]
 exclude = __init__.py, eelbrain/_wxutils/icons.py, eelbrain/table.py, eelbrain/test.py, eelbrain/testnd.py
-ignore = F403,F999
-max-line-length = 100
+ignore = E201,E202,E241,F403,E501,F999
 
 [pydocstyle]
 convention = pep257
